fix: horizontal alignment of username/password text fields

--- a/frontend/public/assets/style/style.css
+++ b/frontend/public/assets/style/style.css
@@ -126,7 +126,9 @@ main {
 .important-numbers {
 	display: grid; 
 	grid-template-columns: max-content max-content; 
-	grid-template-rows: 1fr 1fr; 
+	grid-template-rows: 1fr 1fr;
+	align-items: center;
+	justify-content: center;
 }
 
 #top-row {
